02-SPA: Mejoras en la aplicacion, utilizacion de Input y Output

--- a/Ejercicios/02-SPA/src/app/components/search/search.component.html
+++ b/Ejercicios/02-SPA/src/app/components/search/search.component.html
@@ -10,19 +10,5 @@
 </div>
 
 <div class="card-columns">
-  <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index;">
-    <img class="card-img-top img-fluid" [src]="heroe.img" [alt]="heroe.nombre">
-    <div class="card-block">
-      <h4 class="card-title">{{ heroe.nombre }}</h4>
-      <p class="card-text">{{ heroe.bio }}</p>
-      <p class="card-text"><small class="text-muted">{{ heroe.aparicion }}</small></p>
-      <button (click)="verHeroe(i)" type="button" class="btn btn-outline-primary btn-block">
-        Ver más...
-      </button>
-
-      <!-- <a [routerLink]="['/heroe', i]" class="btn btn-outline-primary btn-block">
-        Ver más link...
-      </a> -->
-    </div>
-  </div>
+  <app-heroe-tarjeta *ngFor="let heroe of heroes;" [heroe]="heroe" [index]="heroe.idx"></app-heroe-tarjeta>
 </div>
