--- a/Ejercicios/05-Deseos-Ionic/src/pages/terminados/terminados.component.html
+++ b/Ejercicios/05-Deseos-Ionic/src/pages/terminados/terminados.component.html
@@ -17,26 +17,5 @@
     </ion-row>
   </ion-grid>
 
-  <ion-card *ngFor="let lista of _listaDeseos.listas | pendientes:true; let i = index">
-
-    <ion-item color="dark" (click)="verDetalle(lista, i)">
-      <h2>{{ lista.nombre }}</h2>
-      <ion-note item-right>
-        {{ lista.items.length}} items
-      </ion-note>
-    </ion-item>
-
-    <ion-list (click)="verDetalle(lista, i)">
-      <ion-item *ngFor="let item of lista.items | slice:0:2">
-        <ion-icon *ngIf="!item.completado" ios="ios-square-outline" md="md-square-outline"></ion-icon>
-        <ion-icon *ngIf="item.completado" ios="ios-checkbox-outline" md="md-checkbox-outline"></ion-icon>
-        {{ item.nombre }}
-      </ion-item>
-
-      <ion-item class="text-center" *ngIf="lista.items.length > 2">
-        <ion-icon color="primary" ios="ios-arrow-dropdown" md="md-arrow-dropdown"></ion-icon>
-      </ion-item>
-    </ion-list>
-
-  </ion-card>
+  <app-listas [terminada]="true"></app-listas>
 </ion-content>
